[workspace]
members = ["programs/vow"]
resolver = "2"

[patch.crates-io]
# Downgrade blake3 to 1.7.0 to avoid edition-2024 transitive deps
# (constant_time_eq, ctutils, cpufeatures, block-buffer, crypto-common, digest, hybrid-array)
# that cargo-build-sbf (Cargo 1.84.x / platform-tools v1.51) cannot parse.
blake3 = { path = "patches/blake3" }
# Downgrade proc-macro-crate to 3.2.0 which uses toml_edit 0.22 (no edition-2024 deps)
proc-macro-crate = { path = "patches/proc-macro-crate" }
# Downgrade hashbrown to avoid edition-2024 (used by various crates)
hashbrown = { path = "patches/hashbrown" }
indexmap = { path = "patches/indexmap" }
unicode-segmentation = { path = "patches/unicode-segmentation" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
