[package]
name = "hashbrown"
version = "0.17.1"
description = "A Rust port of Google's SwissTable hash map"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
foldhash = { version = "0.2.0", default-features = false, optional = true }
allocator-api2 = { version = "0.2.9", optional = true, default-features = false, features = ["alloc"] }
equivalent = { version = "1.0", optional = true, default-features = false }

[features]
default = ["default-hasher", "inline-more", "allocator-api2", "equivalent", "raw-entry"]
nightly = []
rustc-internal-api = []
rustc-dep-of-std = ["nightly", "rustc-internal-api"]
serde = []
raw-entry = []
default-hasher = ["dep:foldhash"]
inline-more = []
