[package]
name = "toml_parser"
version = "1.1.2+spec-1.1.0"
description = "Yet another format-preserving TOML parser."
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = ["std"]
alloc = []
std = ["alloc"]
simd = []
unsafe = []
debug = []

[dependencies]
winnow = { version = "1.0.0", default-features = false }
